book: update ja
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/ja/v2/Git-での分散作業-まとめ.html
+++ b/external/book/content/book/ja/v2/Git-での分散作業-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/GitHub-アカウントの準備と設定
 title: Git - まとめ
 url: "/book/ja/v2/Git-での分散作業-まとめ.html"
+aliases:
+- "/book/ja/Git-での分散作業-まとめ.html"
+- "/book/ja/v1/Git-での分散作業-まとめ.html"
 ---
 <h2 id="_まとめ_6">まとめ</h2>
 <div class="paragraph">
