--- a/external/book/content/book/ja/v2/Git-での分散作業-プロジェクトの運営.html
+++ b/external/book/content/book/ja/v2/Git-での分散作業-プロジェクトの運営.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-での分散作業-まとめ
 title: Git - プロジェクトの運営
 url: "/book/ja/v2/Git-での分散作業-プロジェクトの運営.html"
+aliases:
+- "/book/ja/Git-での分散作業-プロジェクトの運営.html"
+- "/book/ja/v1/Git-での分散作業-プロジェクトの運営.html"
 ---
 <h2 id="_プロジェクトの運営">プロジェクトの運営</h2>
 <div class="paragraph">
