--- a/external/book/content/book/ja/v2/Git-での分散作業-プロジェクトへの貢献.html
+++ b/external/book/content/book/ja/v2/Git-での分散作業-プロジェクトへの貢献.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-での分散作業-プロジェクトの運営
 title: Git - プロジェクトへの貢献
 url: "/book/ja/v2/Git-での分散作業-プロジェクトへの貢献.html"
+aliases:
+- "/book/ja/Git-での分散作業-プロジェクトへの貢献.html"
+- "/book/ja/v1/Git-での分散作業-プロジェクトへの貢献.html"
 ---
 <h2 id="r_contributing_project">プロジェクトへの貢献</h2>
 <div class="paragraph">
