--- a/external/book/content/book/ja/v2/Git-での分散作業-分散作業の流れ.html
+++ b/external/book/content/book/ja/v2/Git-での分散作業-分散作業の流れ.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Git-での分散作業-プロジェクトへの貢献
 title: Git - 分散作業の流れ
 url: "/book/ja/v2/Git-での分散作業-分散作業の流れ.html"
+aliases:
+- "/book/ja/Git-での分散作業.html"
+- "/book/ja/v1/Git-での分散作業.html"
+- "/book/ja/Git-での分散作業-分散作業の流れ.html"
+- "/book/ja/v1/Git-での分散作業-分散作業の流れ.html"
 ---
 <p></p><p>リモート Git リポジトリを用意し、すべての開発者がコードを共有できるようになりました。また、ローカル環境で作業をする際に使う基本的な Git コマンドについても身についたことでしょう。次に、Git を使った分散作業の流れを見ていきましょう。</p><p>本章では、Git を使った分散環境での作業の流れを説明します。
 自分のコードをプロジェクトに提供する方法、そしてプロジェクトのメンテナーと自分の両方が作業を進めやすくする方法、そして多数の開発者からの貢献を受け入れるプロジェクトを運営する方法などを扱います。</p>
