--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-Git-によるデバッグ.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-Git-によるデバッグ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-サブモジュール
 title: Git - Git によるデバッグ
 url: "/book/ja/v2/Git-のさまざまなツール-Git-によるデバッグ.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-Git-によるデバッグ.html"
+- "/book/ja/v1/Git-のさまざまなツール-Git-によるデバッグ.html"
 ---
 <h2 id="_git_によるデバッグ">Git によるデバッグ</h2>
 <div class="paragraph">
