--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-まとめ.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のカスタマイズ-Git-の設定
 title: Git - まとめ
 url: "/book/ja/v2/Git-のさまざまなツール-まとめ.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-まとめ.html"
+- "/book/ja/v1/Git-のさまざまなツール-まとめ.html"
 ---
 <h2 id="_まとめ_9">まとめ</h2>
 <div class="paragraph">
