--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-サブモジュール.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-サブモジュール.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-バンドルファイルの作成
 title: Git - サブモジュール
 url: "/book/ja/v2/Git-のさまざまなツール-サブモジュール.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-サブモジュール.html"
+- "/book/ja/v1/Git-のさまざまなツール-サブモジュール.html"
 ---
 <h2 id="r_git_submodules">サブモジュール</h2>
 <div class="paragraph">
