--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-リビジョンの選択.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-リビジョンの選択.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-対話的なステージング
 title: Git - リビジョンの選択
 url: "/book/ja/v2/Git-のさまざまなツール-リビジョンの選択.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール.html"
+- "/book/ja/v1/Git-のさまざまなツール.html"
+- "/book/ja/Git-のさまざまなツール-リビジョンの選択.html"
+- "/book/ja/v1/Git-のさまざまなツール-リビジョンの選択.html"
 ---
 <p>Git を使ったソースコード管理のためのリポジトリの管理や保守について、日々使用するコマンドやワークフローの大半を身につけました。
 ファイルの追跡やコミットといった基本的なタスクをこなせるようになっただけではなくステージングエリアの威力もいかせるようになりました。また気軽にトピックブランチを切ってマージする方法も知りました。</p><p>では、Git の非常に強力な機能の数々をさらに探っていきましょう。日々の作業でこれらを使うことはあまりありませんが、いつかは必要になるかもしれません。</p>
