--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-作業の隠しかたと消しかた.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-作業の隠しかたと消しかた.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-作業内容への署名
 title: Git - 作業の隠しかたと消しかた
 url: "/book/ja/v2/Git-のさまざまなツール-作業の隠しかたと消しかた.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-作業を隠す.html"
+- "/book/ja/v1/Git-のさまざまなツール-作業を隠す.html"
 ---
 <h2 id="r_git_stashing">作業の隠しかたと消しかた</h2>
 <div class="paragraph">
