--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-歴史の書き換え.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-歴史の書き換え.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-リセットコマンド詳説
 title: Git - 歴史の書き換え
 url: "/book/ja/v2/Git-のさまざまなツール-歴史の書き換え.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-歴史の書き換え.html"
+- "/book/ja/v1/Git-のさまざまなツール-歴史の書き換え.html"
 ---
 <h2 id="r_rewriting_history">歴史の書き換え</h2>
 <div class="paragraph">
