--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-高度なマージ手法.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-高度なマージ手法.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-Rerere
 title: Git - 高度なマージ手法
 url: "/book/ja/v2/Git-のさまざまなツール-高度なマージ手法.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-サブツリーマージ.html"
+- "/book/ja/v1/Git-のさまざまなツール-サブツリーマージ.html"
 ---
 <h2 id="r_advanced_merging">高度なマージ手法</h2>
 <div class="paragraph">
