--- a/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-の設定.html
+++ b/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-の設定.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Git-のカスタマイズ-Git-の属性
 title: Git - Git の設定
 url: "/book/ja/v2/Git-のカスタマイズ-Git-の設定.html"
+aliases:
+- "/book/ja/Git-のカスタマイズ.html"
+- "/book/ja/v1/Git-のカスタマイズ.html"
+- "/book/ja/Git-のカスタマイズ-Git-の設定.html"
+- "/book/ja/v1/Git-のカスタマイズ-Git-の設定.html"
 ---
 <p>ここまで本書では、Git の基本動作やその使用法について扱ってきました。また、Git をより簡単に効率よく使うためのさまざまなツールについても紹介しました。
 本章では、重要な設定項目やフックシステムを使用して、よりカスタマイズされた方法で Git を操作する方法について扱います。
