--- a/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-フック.html
+++ b/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-フック.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のカスタマイズ-Git-ポリシーの実施例
 title: Git - Git フック
 url: "/book/ja/v2/Git-のカスタマイズ-Git-フック.html"
+aliases:
+- "/book/ja/Git-のカスタマイズ-Git-フック.html"
+- "/book/ja/v1/Git-のカスタマイズ-Git-フック.html"
 ---
 <h2 id="r_git_hooks">Git フック</h2>
 <div class="paragraph">
