--- a/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-ポリシーの実施例.html
+++ b/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-ポリシーの実施例.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のカスタマイズ-まとめ
 title: Git - Git ポリシーの実施例
 url: "/book/ja/v2/Git-のカスタマイズ-Git-ポリシーの実施例.html"
+aliases:
+- "/book/ja/Git-のカスタマイズ-Git-ポリシーの実施例.html"
+- "/book/ja/v1/Git-のカスタマイズ-Git-ポリシーの実施例.html"
 ---
 <h2 id="r_an_example_git_enforced_policy">Git ポリシーの実施例</h2>
 <div class="paragraph">
