--- a/external/book/content/book/ja/v2/Git-のカスタマイズ-まとめ.html
+++ b/external/book/content/book/ja/v2/Git-のカスタマイズ-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitとその他のシステムの連携-Git-をクライアントとして使用する
 title: Git - まとめ
 url: "/book/ja/v2/Git-のカスタマイズ-まとめ.html"
+aliases:
+- "/book/ja/Git-のカスタマイズ-まとめ.html"
+- "/book/ja/v1/Git-のカスタマイズ-まとめ.html"
 ---
 <h2 id="_まとめ_10">まとめ</h2>
 <div class="paragraph">
