--- a/external/book/content/book/ja/v2/Git-のブランチ機能-まとめ.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitサーバー-プロトコル
 title: Git - まとめ
 url: "/book/ja/v2/Git-のブランチ機能-まとめ.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-まとめ.html"
+- "/book/ja/v1/Git-のブランチ機能-まとめ.html"
 ---
 <h2 id="_まとめ_3">まとめ</h2>
 <div class="paragraph">
