--- a/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチでの作業の流れ.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチでの作業の流れ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-リモートブランチ
 title: Git - ブランチでの作業の流れ
 url: "/book/ja/v2/Git-のブランチ機能-ブランチでの作業の流れ.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-ブランチでの作業の流れ.html"
+- "/book/ja/v1/Git-のブランチ機能-ブランチでの作業の流れ.html"
 ---
 <h2 id="_ブランチでの作業の流れ">ブランチでの作業の流れ</h2>
 <div class="paragraph">
