--- a/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチとは.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチとは.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Git-のブランチ機能-ブランチとマージの基本
 title: Git - ブランチとは
 url: "/book/ja/v2/Git-のブランチ機能-ブランチとは.html"
+aliases:
+- "/book/ja/Git-のブランチ機能.html"
+- "/book/ja/v1/Git-のブランチ機能.html"
+- "/book/ja/Git-のブランチ機能-ブランチとは.html"
+- "/book/ja/v1/Git-のブランチ機能-ブランチとは.html"
 ---
 <p></p><p>ほぼすべてと言っていいほどの VCS が、何らかの形式でブランチ機能に対応しています。
 ブランチとは、開発の本流から分岐し、本流の開発を邪魔することなく作業を続ける機能のことです。
