--- a/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチとマージの基本.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチとマージの基本.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-ブランチの管理
 title: Git - ブランチとマージの基本
 url: "/book/ja/v2/Git-のブランチ機能-ブランチとマージの基本.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-ブランチとマージの基本.html"
+- "/book/ja/v1/Git-のブランチ機能-ブランチとマージの基本.html"
 ---
 <h2 id="_ブランチとマージの基本">ブランチとマージの基本</h2>
 <div class="paragraph">
