--- a/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチの管理.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-ブランチの管理.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-ブランチでの作業の流れ
 title: Git - ブランチの管理
 url: "/book/ja/v2/Git-のブランチ機能-ブランチの管理.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-ブランチの管理.html"
+- "/book/ja/v1/Git-のブランチ機能-ブランチの管理.html"
 ---
 <h2 id="r_branch_management">ブランチの管理</h2>
 <div class="paragraph">
