--- a/external/book/content/book/ja/v2/Git-のブランチ機能-リベース.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-リベース.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-まとめ
 title: Git - リベース
 url: "/book/ja/v2/Git-のブランチ機能-リベース.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-リベース.html"
+- "/book/ja/v1/Git-のブランチ機能-リベース.html"
 ---
 <h2 id="r_rebasing">リベース</h2>
 <div class="paragraph">
