--- a/external/book/content/book/ja/v2/Git-のブランチ機能-リモートブランチ.html
+++ b/external/book/content/book/ja/v2/Git-のブランチ機能-リモートブランチ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-リベース
 title: Git - リモートブランチ
 url: "/book/ja/v2/Git-のブランチ機能-リモートブランチ.html"
+aliases:
+- "/book/ja/Git-のブランチ機能-リモートブランチ.html"
+- "/book/ja/v1/Git-のブランチ機能-リモートブランチ.html"
 ---
 <h2 id="r_remote_branches">リモートブランチ</h2>
 <div class="paragraph">
