--- a/external/book/content/book/ja/v2/Git-の基本-Git-エイリアス.html
+++ b/external/book/content/book/ja/v2/Git-の基本-Git-エイリアス.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-まとめ
 title: Git - Git エイリアス
 url: "/book/ja/v2/Git-の基本-Git-エイリアス.html"
+aliases:
+- "/book/ja/Git-の基本-ヒントと裏技.html"
+- "/book/ja/v1/Git-の基本-ヒントと裏技.html"
 ---
 <h2 id="r_git_aliases">Git エイリアス</h2>
 <div class="paragraph">
