--- a/external/book/content/book/ja/v2/Git-の基本-まとめ.html
+++ b/external/book/content/book/ja/v2/Git-の基本-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のブランチ機能-ブランチとは
 title: Git - まとめ
 url: "/book/ja/v2/Git-の基本-まとめ.html"
+aliases:
+- "/book/ja/Git-の基本-まとめ.html"
+- "/book/ja/v1/Git-の基本-まとめ.html"
 ---
 <h2 id="_まとめ_2">まとめ</h2>
 <div class="paragraph">
