--- a/external/book/content/book/ja/v2/Git-の基本-コミット履歴の閲覧.html
+++ b/external/book/content/book/ja/v2/Git-の基本-コミット履歴の閲覧.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-作業のやり直し
 title: Git - コミット履歴の閲覧
 url: "/book/ja/v2/Git-の基本-コミット履歴の閲覧.html"
+aliases:
+- "/book/ja/Git-の基本-コミット履歴の閲覧.html"
+- "/book/ja/v1/Git-の基本-コミット履歴の閲覧.html"
 ---
 <h2 id="r_viewing_history">コミット履歴の閲覧</h2>
 <div class="paragraph">
