--- a/external/book/content/book/ja/v2/Git-の基本-タグ.html
+++ b/external/book/content/book/ja/v2/Git-の基本-タグ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-Git-エイリアス
 title: Git - タグ
 url: "/book/ja/v2/Git-の基本-タグ.html"
+aliases:
+- "/book/ja/Git-の基本-タグ.html"
+- "/book/ja/v1/Git-の基本-タグ.html"
 ---
 <h2 id="r_git_tagging">タグ</h2>
 <div class="paragraph">
