--- a/external/book/content/book/ja/v2/Git-の基本-リモートでの作業.html
+++ b/external/book/content/book/ja/v2/Git-の基本-リモートでの作業.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-タグ
 title: Git - リモートでの作業
 url: "/book/ja/v2/Git-の基本-リモートでの作業.html"
+aliases:
+- "/book/ja/Git-の基本-リモートでの作業.html"
+- "/book/ja/v1/Git-の基本-リモートでの作業.html"
 ---
 <h2 id="r_remote_repos">リモートでの作業</h2>
 <div class="paragraph">
