--- a/external/book/content/book/ja/v2/Git-の基本-作業のやり直し.html
+++ b/external/book/content/book/ja/v2/Git-の基本-作業のやり直し.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-リモートでの作業
 title: Git - 作業のやり直し
 url: "/book/ja/v2/Git-の基本-作業のやり直し.html"
+aliases:
+- "/book/ja/Git-の基本-作業のやり直し.html"
+- "/book/ja/v1/Git-の基本-作業のやり直し.html"
 ---
 <h2 id="r_undoing">作業のやり直し</h2>
 <div class="paragraph">
