--- a/external/book/content/book/ja/v2/Gitとその他のシステムの連携-Git-へ移行する.html
+++ b/external/book/content/book/ja/v2/Gitとその他のシステムの連携-Git-へ移行する.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitとその他のシステムの連携-まとめ
 title: Git - Git へ移行する
 url: "/book/ja/v2/Gitとその他のシステムの連携-Git-へ移行する.html"
+aliases:
+- "/book/ja/Gitとその他のシステムの連携-Git-への移行.html"
+- "/book/ja/v1/Gitとその他のシステムの連携-Git-への移行.html"
 ---
 <h2 id="r_migrating">Git へ移行する</h2>
 <div class="paragraph">
