--- a/external/book/content/book/ja/v2/Gitとその他のシステムの連携-Git-をクライアントとして使用する.html
+++ b/external/book/content/book/ja/v2/Gitとその他のシステムの連携-Git-をクライアントとして使用する.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Gitとその他のシステムの連携-Git-へ移行する
 title: Git - Git をクライアントとして使用する
 url: "/book/ja/v2/Gitとその他のシステムの連携-Git-をクライアントとして使用する.html"
+aliases:
+- "/book/ja/Gitとその他のシステムの連携.html"
+- "/book/ja/v1/Gitとその他のシステムの連携.html"
+- "/book/ja/Gitとその他のシステムの連携-Git-と-Subversion.html"
+- "/book/ja/v1/Gitとその他のシステムの連携-Git-と-Subversion.html"
 ---
 <p>世の中はそんなにうまくいくものではありません。
 あなたが関わることになったプロジェクトで使うバージョン管理システムを、すぐさまGitに切り替えられることはほとんどないでしょう。
