--- a/external/book/content/book/ja/v2/Gitとその他のシステムの連携-まとめ.html
+++ b/external/book/content/book/ja/v2/Gitとその他のシステムの連携-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-配管（Plumbing）と磁器（Porcelain）
 title: Git - まとめ
 url: "/book/ja/v2/Gitとその他のシステムの連携-まとめ.html"
+aliases:
+- "/book/ja/Gitとその他のシステムの連携-まとめ.html"
+- "/book/ja/v1/Gitとその他のシステムの連携-まとめ.html"
 ---
 <h2 id="_まとめ_11">まとめ</h2>
 <div class="paragraph">
