--- a/external/book/content/book/ja/v2/Gitの内側-Packfile.html
+++ b/external/book/content/book/ja/v2/Gitの内側-Packfile.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-Refspec
 title: Git - Packfile
 url: "/book/ja/v2/Gitの内側-Packfile.html"
+aliases:
+- "/book/ja/Gitの内側-パックファイル.html"
+- "/book/ja/v1/Gitの内側-パックファイル.html"
 ---
 <h2 id="_packfile">Packfile</h2>
 <div class="paragraph">
