--- a/external/book/content/book/ja/v2/Gitの内側-まとめ.html
+++ b/external/book/content/book/ja/v2/Gitの内側-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/付録-A:-その他の環境でのGit-グラフィカルインタフェース
 title: Git - まとめ
 url: "/book/ja/v2/Gitの内側-まとめ.html"
+aliases:
+- "/book/ja/Gitの内側-要約.html"
+- "/book/ja/v1/Gitの内側-要約.html"
 ---
 <h2 id="_まとめ_12">まとめ</h2>
 <div class="paragraph">
