--- a/external/book/content/book/ja/v2/Gitの内側-メンテナンスとデータリカバリ.html
+++ b/external/book/content/book/ja/v2/Gitの内側-メンテナンスとデータリカバリ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-環境変数
 title: Git - メンテナンスとデータリカバリ
 url: "/book/ja/v2/Gitの内側-メンテナンスとデータリカバリ.html"
+aliases:
+- "/book/ja/Gitの内側-メインテナンスとデータリカバリ.html"
+- "/book/ja/v1/Gitの内側-メインテナンスとデータリカバリ.html"
 ---
 <h2 id="_メンテナンスとデータリカバリ">メンテナンスとデータリカバリ</h2>
 <div class="paragraph">
