--- a/external/book/content/book/ja/v2/Gitの内側-転送プロトコル.html
+++ b/external/book/content/book/ja/v2/Gitの内側-転送プロトコル.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-メンテナンスとデータリカバリ
 title: Git - 転送プロトコル
 url: "/book/ja/v2/Gitの内側-転送プロトコル.html"
+aliases:
+- "/book/ja/Gitの内側-トランスファープロトコル.html"
+- "/book/ja/v1/Gitの内側-トランスファープロトコル.html"
 ---
 <h2 id="_転送プロトコル">転送プロトコル</h2>
 <div class="paragraph">
