--- a/external/book/content/book/ja/v2/Gitの内側-配管（Plumbing）と磁器（Porcelain）.html
+++ b/external/book/content/book/ja/v2/Gitの内側-配管（Plumbing）と磁器（Porcelain）.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Gitの内側-Gitオブジェクト
 title: Git - 配管（Plumbing）と磁器（Porcelain）
 url: "/book/ja/v2/Gitの内側-配管（Plumbing）と磁器（Porcelain）.html"
+aliases:
+- "/book/ja/Gitの内側.html"
+- "/book/ja/v1/Gitの内側.html"
+- "/book/ja/Gitの内側-配管（Plumbing）と磁器（Porcelain）.html"
+- "/book/ja/v1/Gitの内側-配管（Plumbing）と磁器（Porcelain）.html"
 ---
 <p>どこかの章からここに飛んできたのか、本書の他の部分を読み終えてからここにたどり着いたのか – いずれにせよ、この章ではGitの内部動作と実装を詳細に見ていきます。
 我々は、Gitがいかに便利で強力かを理解するには、その内部動作と実装を学ぶことが根本的に重要であると考えました。一方で、そういった内容は、初心者にとっては不必要に複雑で、かえって混乱を招くおそれがあると主張する人もいました。
