--- a/external/book/content/book/ja/v2/Gitサーバー-Git-デーモン.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-Git-デーモン.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitサーバー-Smart-HTTP
 title: Git - Git デーモン
 url: "/book/ja/v2/Gitサーバー-Git-デーモン.html"
+aliases:
+- "/book/ja/Git-サーバー-Git-デーモン.html"
+- "/book/ja/v1/Git-サーバー-Git-デーモン.html"
 ---
 <h2 id="_git_デーモン">Git デーモン</h2>
 <div class="paragraph">
