--- a/external/book/content/book/ja/v2/Gitサーバー-SSH-公開鍵の作成.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-SSH-公開鍵の作成.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitサーバー-サーバーのセットアップ
 title: Git - SSH 公開鍵の作成
 url: "/book/ja/v2/Gitサーバー-SSH-公開鍵の作成.html"
+aliases:
+- "/book/ja/Git-サーバー-SSH-公開鍵の作成.html"
+- "/book/ja/v1/Git-サーバー-SSH-公開鍵の作成.html"
 ---
 <h2 id="r_generate_ssh_key">SSH 公開鍵の作成</h2>
 <div class="paragraph">
