--- a/external/book/content/book/ja/v2/Gitサーバー-まとめ.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-での分散作業-分散作業の流れ
 title: Git - まとめ
 url: "/book/ja/v2/Gitサーバー-まとめ.html"
+aliases:
+- "/book/ja/Git-サーバー-まとめ.html"
+- "/book/ja/v1/Git-サーバー-まとめ.html"
 ---
 <h2 id="_まとめ_4">まとめ</h2>
 <div class="paragraph">
