--- a/external/book/content/book/ja/v2/Gitサーバー-サードパーティによる-Git-ホスティング.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-サードパーティによる-Git-ホスティング.html
@@ -17,6 +17,17 @@ book:
     next: book/ja/v2/Gitサーバー-まとめ
 title: Git - サードパーティによる Git ホスティング
 url: "/book/ja/v2/Gitサーバー-サードパーティによる-Git-ホスティング.html"
+aliases:
+- "/book/ja/Git-サーバー-一般公開.html"
+- "/book/ja/v1/Git-サーバー-一般公開.html"
+- "/book/ja/Git-サーバー-GitWeb.html"
+- "/book/ja/v1/Git-サーバー-GitWeb.html"
+- "/book/ja/Git-サーバー-Gitosis.html"
+- "/book/ja/v1/Git-サーバー-Gitosis.html"
+- "/book/ja/Git-サーバー-Gitolite.html"
+- "/book/ja/v1/Git-サーバー-Gitolite.html"
+- "/book/ja/Git-サーバー-Git-のホスティング.html"
+- "/book/ja/v1/Git-サーバー-Git-のホスティング.html"
 ---
 <h2 id="_サードパーティによる_git_ホスティング">サードパーティによる Git ホスティング</h2>
 <div class="paragraph">
