--- a/external/book/content/book/ja/v2/Gitサーバー-サーバーのセットアップ.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-サーバーのセットアップ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitサーバー-Git-デーモン
 title: Git - サーバーのセットアップ
 url: "/book/ja/v2/Gitサーバー-サーバーのセットアップ.html"
+aliases:
+- "/book/ja/Git-サーバー-サーバーのセットアップ.html"
+- "/book/ja/v1/Git-サーバー-サーバーのセットアップ.html"
 ---
 <h2 id="r_setting_up_server">サーバーのセットアップ</h2>
 <div class="paragraph">
