--- a/external/book/content/book/ja/v2/Gitサーバー-サーバー用の-Git-の取得.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-サーバー用の-Git-の取得.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitサーバー-SSH-公開鍵の作成
 title: Git - サーバー用の Git の取得
 url: "/book/ja/v2/Gitサーバー-サーバー用の-Git-の取得.html"
+aliases:
+- "/book/ja/Git-サーバー-サーバー用の-Git-の取得.html"
+- "/book/ja/v1/Git-サーバー-サーバー用の-Git-の取得.html"
 ---
 <h2 id="r_git_on_the_server">サーバー用の Git の取得</h2>
 <div class="paragraph">
