--- a/external/book/content/book/ja/v2/Gitサーバー-プロトコル.html
+++ b/external/book/content/book/ja/v2/Gitサーバー-プロトコル.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Gitサーバー-サーバー用の-Git-の取得
 title: Git - プロトコル
 url: "/book/ja/v2/Gitサーバー-プロトコル.html"
+aliases:
+- "/book/ja/Git-サーバー.html"
+- "/book/ja/v1/Git-サーバー.html"
+- "/book/ja/Git-サーバー-プロトコル.html"
+- "/book/ja/v1/Git-サーバー-プロトコル.html"
 ---
 <p></p><p>ここまで読んだみなさんは、ふだん Git を使う上で必要になるタスクのほとんどを身につけたことでしょう。
 しかし、Git で何らかの共同作業をしようと思えばリモートの Git リポジトリを持つ必要があります。
