--- a/external/book/content/book/ja/v2/_index.html
+++ b/external/book/content/book/ja/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/ja/v2.html"
 aliases:
 - "/book/ja/v2/index.html"
+- "/book/ja/v1/index.html"
 - "/book/ja/index.html"
 ---
