--- a/external/book/content/book/ja/v2/付録-C:-Gitのコマンド-セットアップと設定.html
+++ b/external/book/content/book/ja/v2/付録-C:-Gitのコマンド-セットアップと設定.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/付録-C:-Gitのコマンド-プロジェクトの取得と作成
 title: Git - セットアップと設定
 url: "/book/ja/v2/付録-C:-Gitのコマンド-セットアップと設定.html"
+aliases:
+- "/book/ja/commands.html"
+- "/book/ja/v1/commands.html"
 ---
 <p>本書を通して、数多くのGitコマンドを紹介してきました。コマンドの説明にあたっては、物語風に、使うコマンドを少しずつ増やしていくように心掛けてきました。しかしその結果、コマンドの使用例が本書の全体に散在する形になってしまいました。</p><p>この付録では、本書で扱ったすべてのGitコマンドを見ていきます。コマンドはその用途ごとに大まかにまとめてあります。ここでは、それぞれのコマンドが一般的に何を行うのか、そして本書のどこでそのコマンドが使われていたかについて述べていきます。</p>
 <h2 id="_セットアップと設定">セットアップと設定</h2>
