--- a/external/book/content/book/ja/v2/使い始める-Gitのインストール.html
+++ b/external/book/content/book/ja/v2/使い始める-Gitのインストール.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/使い始める-最初のGitの構成
 title: Git - Gitのインストール
 url: "/book/ja/v2/使い始める-Gitのインストール.html"
+aliases:
+- "/book/ja/使い始める-Gitのインストール.html"
+- "/book/ja/v1/使い始める-Gitのインストール.html"
 ---
 <h2 id="_gitのインストール">Gitのインストール</h2>
 <div class="paragraph">
