--- a/external/book/content/book/ja/v2/使い始める-Git略史.html
+++ b/external/book/content/book/ja/v2/使い始める-Git略史.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/使い始める-Gitの基本
 title: Git - Git略史
 url: "/book/ja/v2/使い始める-Git略史.html"
+aliases:
+- "/book/ja/使い始める-Git略史.html"
+- "/book/ja/v1/使い始める-Git略史.html"
 ---
 <h2 id="_git略史">Git略史</h2>
 <div class="paragraph">
