--- a/external/book/content/book/ja/v2/使い始める-まとめ.html
+++ b/external/book/content/book/ja/v2/使い始める-まとめ.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-Git-リポジトリの取得
 title: Git - まとめ
 url: "/book/ja/v2/使い始める-まとめ.html"
+aliases:
+- "/book/ja/使い始める-まとめ.html"
+- "/book/ja/v1/使い始める-まとめ.html"
 ---
 <h2 id="_まとめ">まとめ</h2>
 <div class="paragraph">
