--- a/external/book/content/book/ja/v2/使い始める-バージョン管理に関して.html
+++ b/external/book/content/book/ja/v2/使い始める-バージョン管理に関して.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/使い始める-Git略史
 title: Git - バージョン管理に関して
 url: "/book/ja/v2/使い始める-バージョン管理に関して.html"
+aliases:
+- "/book/ja/使い始める.html"
+- "/book/ja/v1/使い始める.html"
+- "/book/ja/使い始める-バージョン管理に関して.html"
+- "/book/ja/v1/使い始める-バージョン管理に関して.html"
 ---
 <p>この章は、Gitを使い始めることについてのものです。
 まずはバージョン管理システムの背景に触れ、次にGitをあなたのシステムで動かす方法、最後にGitで作業を始めるための設定方法について説明します。
