--- a/external/book/content/book/ja/v2/使い始める-ヘルプを見る.html
+++ b/external/book/content/book/ja/v2/使い始める-ヘルプを見る.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/使い始める-まとめ
 title: Git - ヘルプを見る
 url: "/book/ja/v2/使い始める-ヘルプを見る.html"
+aliases:
+- "/book/ja/使い始める-ヘルプを見る.html"
+- "/book/ja/v1/使い始める-ヘルプを見る.html"
 ---
 <h2 id="r_git_help">ヘルプを見る</h2>
 <div class="paragraph">
