--- a/external/book/content/book/ja/v2/使い始める-最初のGitの構成.html
+++ b/external/book/content/book/ja/v2/使い始める-最初のGitの構成.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/使い始める-ヘルプを見る
 title: Git - 最初のGitの構成
 url: "/book/ja/v2/使い始める-最初のGitの構成.html"
+aliases:
+- "/book/ja/使い始める-最初のGitの構成.html"
+- "/book/ja/v1/使い始める-最初のGitの構成.html"
 ---
 <h2 id="r_first_time">最初のGitの構成</h2>
 <div class="paragraph">
