--- a/external/book/content/book/ja/v2/Git-のさまざまなツール-対話的なステージング.html
+++ b/external/book/content/book/ja/v2/Git-のさまざまなツール-対話的なステージング.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のさまざまなツール-作業の隠しかたと消しかた
 title: Git - 対話的なステージング
 url: "/book/ja/v2/Git-のさまざまなツール-対話的なステージング.html"
+aliases:
+- "/book/ja/Git-のさまざまなツール-対話的なステージング.html"
+- "/book/ja/v1/Git-のさまざまなツール-対話的なステージング.html"
 ---
 <h2 id="r_interactive_staging">対話的なステージング</h2>
 <div class="paragraph">
