--- a/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-の属性.html
+++ b/external/book/content/book/ja/v2/Git-のカスタマイズ-Git-の属性.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-のカスタマイズ-Git-フック
 title: Git - Git の属性
 url: "/book/ja/v2/Git-のカスタマイズ-Git-の属性.html"
+aliases:
+- "/book/ja/Git-のカスタマイズ-Git-の属性.html"
+- "/book/ja/v1/Git-のカスタマイズ-Git-の属性.html"
 ---
 <h2 id="_git_の属性">Git の属性</h2>
 <div class="paragraph">
