--- a/external/book/content/book/ja/v2/Git-の基本-Git-リポジトリの取得.html
+++ b/external/book/content/book/ja/v2/Git-の基本-Git-リポジトリの取得.html
@@ -17,6 +17,11 @@ book:
     next: book/ja/v2/Git-の基本-変更内容のリポジトリへの記録
 title: Git - Git リポジトリの取得
 url: "/book/ja/v2/Git-の基本-Git-リポジトリの取得.html"
+aliases:
+- "/book/ja/Git-の基本.html"
+- "/book/ja/v1/Git-の基本.html"
+- "/book/ja/Git-の基本-Git-リポジトリの取得.html"
+- "/book/ja/v1/Git-の基本-Git-リポジトリの取得.html"
 ---
 <p>Git を使い始めるにあたってどれかひとつの章だけしか読めないとしたら、読むべきは本章です。
 この章では、あなたが実際に Git を使う際に必要となる基本コマンドをすべて取り上げています。
