--- a/external/book/content/book/ja/v2/Git-の基本-変更内容のリポジトリへの記録.html
+++ b/external/book/content/book/ja/v2/Git-の基本-変更内容のリポジトリへの記録.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Git-の基本-コミット履歴の閲覧
 title: Git - 変更内容のリポジトリへの記録
 url: "/book/ja/v2/Git-の基本-変更内容のリポジトリへの記録.html"
+aliases:
+- "/book/ja/Git-の基本-変更内容のリポジトリへの記録.html"
+- "/book/ja/v1/Git-の基本-変更内容のリポジトリへの記録.html"
 ---
 <h2 id="_変更内容のリポジトリへの記録">変更内容のリポジトリへの記録</h2>
 <div class="paragraph">
