--- a/external/book/content/book/ja/v2/Gitの内側-Gitの参照.html
+++ b/external/book/content/book/ja/v2/Gitの内側-Gitの参照.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-Packfile
 title: Git - Gitの参照
 url: "/book/ja/v2/Gitの内側-Gitの参照.html"
+aliases:
+- "/book/ja/Gitの内側-Gitの参照.html"
+- "/book/ja/v1/Gitの内側-Gitの参照.html"
 ---
 <h2 id="r_git_refs">Gitの参照</h2>
 <div class="paragraph">
