--- a/external/book/content/book/ja/v2/Gitの内側-Gitオブジェクト.html
+++ b/external/book/content/book/ja/v2/Gitの内側-Gitオブジェクト.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-Gitの参照
 title: Git - Gitオブジェクト
 url: "/book/ja/v2/Gitの内側-Gitオブジェクト.html"
+aliases:
+- "/book/ja/Gitの内側-Gitオブジェクト.html"
+- "/book/ja/v1/Gitの内側-Gitオブジェクト.html"
 ---
 <h2 id="r_objects">Gitオブジェクト</h2>
 <div class="paragraph">
