--- a/external/book/content/book/ja/v2/Gitの内側-Refspec.html
+++ b/external/book/content/book/ja/v2/Gitの内側-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/Gitの内側-転送プロトコル
 title: Git - Refspec
 url: "/book/ja/v2/Gitの内側-Refspec.html"
+aliases:
+- "/book/ja/Gitの内側-参照仕様（Refspec）.html"
+- "/book/ja/v1/Gitの内側-参照仕様（Refspec）.html"
 ---
 <h2 id="r_refspec">Refspec</h2>
 <div class="paragraph">
