--- a/external/book/content/book/ja/v2/使い始める-Gitの基本.html
+++ b/external/book/content/book/ja/v2/使い始める-Gitの基本.html
@@ -17,6 +17,9 @@ book:
     next: book/ja/v2/使い始める-コマンドライン
 title: Git - Gitの基本
 url: "/book/ja/v2/使い始める-Gitの基本.html"
+aliases:
+- "/book/ja/使い始める-Gitの基本.html"
+- "/book/ja/v1/使い始める-Gitの基本.html"
 ---
 <h2 id="_gitの基本">Gitの基本</h2>
 <div class="paragraph">
