--- a/external/book/content/book/bg/v2/_index.html
+++ b/external/book/content/book/bg/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/bg/v2.html"
 aliases:
 - "/book/bg/v2/index.html"
+- "/book/bg/v1/index.html"
 - "/book/bg/index.html"
 ---
